--- a/bernadette.html
+++ b/bernadette.html
@@ -33,23 +33,21 @@
                 <h2>Descubre el entretenimiento al maximo</h2>
             </div>
             </article>
-        <h1>Howard Wolowitz</h1>
+        <h1>Bernadette Rostenkowski</h1>
            <div class="sheldon"> 
-         <img src="images/howardd.jpg" alt="">
+         <img src="images/benadettee.jpg" alt="">
 
             </div>   
         <article> 
-        <p><strong>Howard Joel Wolowitz</strong> es un personaje principal de la serie The big bang theory. Trabaja como <em>ingeniero</em> en el Instituto Tecnológico de California y actualmente esta casado con Bernadette Rostenkowski. Howard nació el 9 de julio de 1983. Es interpretado por Simon Helberg.
-       
-        Es difícil describir la personalidad de Howard. Es el más pervertido de su grupo de amigos y quizá de toda la serie. Ha comentado que ha tenido distintas experiencias inusuales con mujeres. Aun así se lo describía como fracasado en el amor y bastante inepto al intentar ligar mujeres. Hasta que conoce a Bernadette, su novia y posterior esposa, formando la pareja más estable de la serie....</p>
+        <p><strong>La Dra. Bernadette Maryann Rostenkowski Wolowitz</strong> era camarera en el Cheesecake Factory, donde trabaja para pagar sus estudios de Microbiología hasta que consiguió su doctorado y un puesto en una farmacéutica. Es una de la amigas de Penny, y actualmente es la esposa de Howard Wolowitz. Su cumpleaños es el 23 de Junio, nació en 1983. Es interpretada por Melissa Rauch.</p>
         </article>
         <br><br>
         <article>
-         <p>Es inmaduro y ha llegado a ser conflictivo en algunas ocasiones, pero no parece saber bien cómo defenderse de quienes lo amenazan o se burlan de él. Como el resto de sus amigos, también admite que es nerd. Suele discutir mucho con Sheldon, sobre todo porque éste subestima a los ingenieros, y se burla de él por no tener doctorado. Mientras Rajesh es su mejor amigo y suele llevarse bien con Leonard.
+         <p>Bernadette resulta ser una chica calmada y seria, ligeramente tímida, aunque de vez en cuando tiene sus momentos de "rebeldía" cuando la hacen enojar, o mayormente cuando se reúne con Penny y Amy para hablar mal de Priya, debido a su relación con Leonard.
 
-         En cuanto a su matrimonio con Bernadette, aunque la ama mucho, su inmadurez le ha provocado muchas discusiones con ella, ya que parece tratarla como si fuera su mamá.
+         Generalmente, lleva las cosas con calma y es muy comprensible, pues hubo un momento en el que casi besa a Raj, cuando él le dijo que ya tenía un año sin besar a una chica, pero segundos antes, Howard interpone, resultando en un beso de labios entre ambos chicos, cosa que a Bernadette le resultó divertido. También se interesa por la física, aunque se siente más atraída por el trabajo de Leonard, lo que inicialmente resultó con pequeños conflictos entre ellos dos, debido a la inseguridad de Howard por perder a su novia.
 
-         Le gusta mucho la magia y la moda de los años 60, como se evidencia en su peinado estilo Beatle. Howard es a veces engreído, aunque no tanto como Sheldon, y aun así termina siendo ridiculizado en muchas ocasiones.
+         Bernadette tiene la capacidad de controlar a los chicos malcriados, pues en una ocasión le ordena a Sheldon ir a dormir, después de que platican que es lo que pasa con las funciones cognoscitivas cuando el cuerpo no descansa. A pesar de que él se opuso, ella le obliga y finalmente Sheldon va a la cama. Cuando los demás le preguntan qué es lo que había hecho ella contesta que tenía experiencia con chiquillos tras cuidar a tantos en la guardería clandestina de su madre.
              
 
 
