--- a/penny.html
+++ b/penny.html
@@ -33,23 +33,21 @@
                 <h2>Descubre el entretenimiento al maximo</h2>
             </div>
             </article>
-        <h1>Howard Wolowitz</h1>
+        <h1>Rajesh Ramayan Koothrappali</h1>
            <div class="sheldon"> 
-         <img src="images/howardd.jpg" alt="">
+         <img src="images/pennyy.jpg" alt="">
 
             </div>   
         <article> 
-        <p><strong>Howard Joel Wolowitz</strong> es un personaje principal de la serie The big bang theory. Trabaja como <em>ingeniero</em> en el Instituto Tecnológico de California y actualmente esta casado con Bernadette Rostenkowski. Howard nació el 9 de julio de 1983. Es interpretado por Simon Helberg.
-       
-        Es difícil describir la personalidad de Howard. Es el más pervertido de su grupo de amigos y quizá de toda la serie. Ha comentado que ha tenido distintas experiencias inusuales con mujeres. Aun así se lo describía como fracasado en el amor y bastante inepto al intentar ligar mujeres. Hasta que conoce a Bernadette, su novia y posterior esposa, formando la pareja más estable de la serie....</p>
+        <p><strong>Penny</strong> es una eterna aspirante a actriz, que mientras tanto trabaja como camarera en un restaurante llamado “The Cheesecake Factory”, al que acuden regularmente los cuatro protagonistas masculinos de la serie. Es sagitario, por lo que nació entre el 22 de noviembre y el 21 de diciembre. Aunque, según la lógica del truco de magia de Wolowitz, en el episodio The prestidigitation Approximation, se podría inferir que su cumpleaños es el 2 de diciembre. Actualmente es esposa del Dr. Leonard Hofstadter y trabaja en la misma empresa farmacéutica que la Dra. Bernadette Rostenkowski- Wolowitz.</p>
         </article>
         <br><br>
         <article>
-         <p>Es inmaduro y ha llegado a ser conflictivo en algunas ocasiones, pero no parece saber bien cómo defenderse de quienes lo amenazan o se burlan de él. Como el resto de sus amigos, también admite que es nerd. Suele discutir mucho con Sheldon, sobre todo porque éste subestima a los ingenieros, y se burla de él por no tener doctorado. Mientras Rajesh es su mejor amigo y suele llevarse bien con Leonard.
+         <p>n contraste al resto del grupo, Penny ni es particularmente inteligente ni sabe mucho sobre ciencia, pero tiene unas grandes dotes sociales y mucho conocimiento sobre cultura pop. Es desordenada y algo fiestera, pero al parecer le gusta vivir de ese modo. Tiene mucha confianza en los horóscopos y en las adivinas y discute varias veces con Leonard y Sheldon sobre su precisión.
 
-         En cuanto a su matrimonio con Bernadette, aunque la ama mucho, su inmadurez le ha provocado muchas discusiones con ella, ya que parece tratarla como si fuera su mamá.
+         También tiene un carácter chino tatuado en su glúteo derecho. Según ella significa “coraje” mientras que según Sheldon significa “sopa”. Suele usar aceite de vainilla como perfume y tiende a roncar (especialmente cuando duerme de espaldas). Pese a que dice ser vegetariana, sus hábitos alimenticios a lo largo de la serie demuestran que no lo es. 
 
-         Le gusta mucho la magia y la moda de los años 60, como se evidencia en su peinado estilo Beatle. Howard es a veces engreído, aunque no tanto como Sheldon, y aun así termina siendo ridiculizado en muchas ocasiones.
+         Pese a que no tiene un nivel intelectual tan alto como el resto del grupo, es bastante astuta, y utiliza constantemente sus dotes físicos para favorecerse.
              
 
 
