--- a/raj.html
+++ b/raj.html
@@ -33,23 +33,19 @@
                 <h2>Descubre el entretenimiento al maximo</h2>
             </div>
             </article>
-        <h1>Howard Wolowitz</h1>
+        <h1>Rajesh Ramayan Koothrappali</h1>
            <div class="sheldon"> 
-         <img src="images/howardd.jpg" alt="">
+         <img src="images/rajesh.webp" alt="">
 
             </div>   
         <article> 
-        <p><strong>Howard Joel Wolowitz</strong> es un personaje principal de la serie The big bang theory. Trabaja como <em>ingeniero</em> en el Instituto Tecnológico de California y actualmente esta casado con Bernadette Rostenkowski. Howard nació el 9 de julio de 1983. Es interpretado por Simon Helberg.
-       
-        Es difícil describir la personalidad de Howard. Es el más pervertido de su grupo de amigos y quizá de toda la serie. Ha comentado que ha tenido distintas experiencias inusuales con mujeres. Aun así se lo describía como fracasado en el amor y bastante inepto al intentar ligar mujeres. Hasta que conoce a Bernadette, su novia y posterior esposa, formando la pareja más estable de la serie....</p>
+        <p><strong>Rajesh Ramayan Koothrappali</strong> mejor conocido como Raj es un personaje principal hindú en la serie The Big Bang Theory. Trabaja en el departamento de Física en la universidad de Caltech donde su área de especialización es la astrofísica de partículas. Su relación con las mujeres es opuesto a Howard. Él es tan tímido, que es incapaz de hablar con ellas a menos que esté borracho; dice padecer de mutismo selectivo. Su signo zodiacal es libra y nació el 6 de octubre de 1981. Es interpretado por el actor Kunal Nayyar.</p>
         </article>
         <br><br>
         <article>
-         <p>Es inmaduro y ha llegado a ser conflictivo en algunas ocasiones, pero no parece saber bien cómo defenderse de quienes lo amenazan o se burlan de él. Como el resto de sus amigos, también admite que es nerd. Suele discutir mucho con Sheldon, sobre todo porque éste subestima a los ingenieros, y se burla de él por no tener doctorado. Mientras Rajesh es su mejor amigo y suele llevarse bien con Leonard.
+         <p>Rajesh es sensato, sensible y buena persona. Parece ser alguien que evita los conflictos tanto como puede ser cantó en concreto, razón por la que es uno Además de ser muy inteligente por ser un gran astrofísico. Sin embargo, su timidez amorosa, su dificultad para hablar con Ingrid y su consiguiente falta de la cantante, lo han llevado a padecer de baja autoestima.
 
-         En cuanto a su matrimonio con Bernadette, aunque la ama mucho, su inmadurez le ha provocado muchas discusiones con ella, ya que parece tratarla como si fuera su mamá.
-
-         Le gusta mucho la magia y la moda de los años 60, como se evidencia en su peinado estilo Beatle. Howard es a veces engreído, aunque no tanto como Sheldon, y aun así termina siendo ridiculizado en muchas ocasiones.
+         Aun así, Rajesh tiene 23 años de edad supera su timidez con el paso de las temporadas y ha llegado a tener algunas novias, las cuales por alguna razón terminan con él, lo cual lo entristece. También ha tenido algunas otras experiencias amorosas similares a las que ha tenido Es uno de los pocos personajes que no tienen una pareja estable. Suele ser descrito como detallista y tierno por parte canto; con ésta última comparte muchos parecidos en personalidad.
              
 
 
