--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
     <header>
         <div>
-            <a href="index.html"><img src="images/bigbang4.jpg" alt="Logo Pixar"></a>
+            <a href="index.html"><img src="images/bigbang4.jpg" alt="Logo big bang"></a>
         </div>
         <nav id="navegador">
-           <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
+           
             <ul>
                  <li><a data-text="Inicio" href="index.html">Inicio</a></li>
                 <li><a data-text="Personajes"href="personajes.html">Personajes</a></li>
@@ -23,7 +23,9 @@
                 <li><a data-text="Contacto" href="contacto.html">Contacto</a></li>
                 <li><a data-text="Trivia" href="trivia.html">Trivia</a></li>
             </ul>
-            </ul>
+              <div class="hide">
+    <i class="fa fa-bars" aria-hidden="true"></i> Menu
+  </div>
         </nav>
     </header>
     <section>
@@ -71,16 +73,12 @@
         <a href="https://www.youtube.com/watch?v=U1KGRnWjllg"><img src="images/redes/youtube1.jpg" alt="Youtube"></a>
         <a href="https://www.instagram.com/bigbangtheory/?hl=es"><img src="images/redes/insta.png" alt="Instagram"></a>
     </footer>
-    <script type="text/javascript">
-        function myFunction() {
-          var x = document.getElementById("navegador");
-          if (x.className === "") {
-            x.className += "responsive";
-          } else {
-            x.className = "";
-          }
-}
-
-    </script>
+    
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+  <script>
+    $(".hide").on('click', function() {
+      $("nav ul").toggle('slow');
+    })
+  </script>
 </body>
 </html>
