--- a/index.html
+++ b/index.html
@@ -47,21 +47,21 @@
         </p>
         <article class="secundario">
             <div>
-                <a href="#">
+                <a href="personajes.html">
                     <img src="images/clases de esgrima.jpg" alt="" height="221">
-                    <h4>Clases de esgrima</h4>
+                    <h4>Personajes</h4>
                 </a>
             </div>
             <div>
-                <a href="#">
+                <a href="trivia.html">
                     <img src="images/nimoy.jpg" alt="">
-                    <h4>Sheldon con Nimoy jr</h4>
+                    <h4>Trivias</h4>
                 </a>
             </div>
             <div>
-                <a href="#">
+                <a href="galeria.html">
                     <img src="images/elelenco.jpg" alt="">
-                    <h4>El Elenco</h4>
+                    <h4>Galeria</h4>
                 </a>
             </div>
         </article>
