cambio de nombre

--- a/penny.html
+++ b/penny.html
@@ -33,7 +33,7 @@
                 <h2>Descubre el entretenimiento al maximo</h2>
             </div>
             </article>
-        <h1>Rajesh Ramayan Koothrappali</h1>
+        <h1>Penny Hoffstadter</h1>
            <div class="sheldon"> 
          <img src="images/pennyy.jpg" alt="">
 
