--- a/trivia.html
+++ b/trivia.html
@@ -17,11 +17,11 @@
         <nav id="navegador">
            <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
             <ul>
-                 <li><a data-text="Inicio" href="index.html">Inicio</a></li>
-                <li><a data-text="Personajes"href="personajes.html">Personajes</a></li>
-                <li><a data-text="Galeria" href="galeria.html">Galería</a></li>
-                <li><a data-text="Contacto" href="contacto.html">Contacto</a></li>
-                <li><a data-text="Trivia" href="trivia.html">Trivia</a></li>
+                 <li><a href="index.html">Inicio</a></li>
+                <li><a href="personajes.html">Personajes</a></li>
+                <li><a href="galeria.html">Galería</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="trivia.html">Trivia</a></li>
             </ul>
             </ul>
         </nav>
