--- a/galeria.html
+++ b/galeria.html
@@ -16,7 +16,7 @@
             <a href="index.html"><img src="images/bigbang4.jpg" alt="Logo Pixar"></a>
         </div>
         <nav id="navegador">
-           
+          <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a> 
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="personajes.html">Personajes</a></li>
@@ -24,7 +24,7 @@
                 <li><a href="contacto.html">Contacto</a></li>
                 <li><a href="trivia.html">Trivia</a></li>
             </ul>
-            </ul>
+            
         </nav>
     </header>
     <section>
@@ -54,8 +54,22 @@
         <a href="https://www.youtube.com/watch?v=U1KGRnWjllg"><img src="images/redes/youtube1.jpg" alt="Youtube"></a>
         <a href="https://www.instagram.com/bigbangtheory/?hl=es"><img src="images/redes/insta.png" alt="Instagram"></a>
     </footer>
-  
-    <script src="js/lightbox-plus-jquery.js"></script>
+ 
+    <script type="text/javascript">
+        function myFunction() {
+          var x = document.getElementById("navegador");
+          if (x.className === "") {
+            x.className += "responsive";
+          } else {
+            x.className = "";
+          }
+}
 
+</script>
+
+
+
+    <script src="js/lightbox-plus-jquery.js"></script>
+ 
 </body>
 </html>
